# fastapi-app-settings

./: .gitignore  FEATURES.md  MANIFEST.in  README.md  TEMPLATE_USAGE.md  __init__.py  demo.py  model_factory.py  models.py  pyproject.toml  router.py  settings_manager.py
docs/: FEATURES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  QUICKSTART.md  TEMPLATE_GALLERY.md  example_template_usage.py
templates/: README.md  settings_base.html  settings_example.html
tests/: test_extra_settings_map.py  test_model_factory.py  test_module.py  test_templates.py
