[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-app-settings"
version = "0.0.2"
description = "Reusable SettingsManager and FastAPI router for application settings (SQLAlchemy + Pydantic)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fabian Aichele", email = "aichele@zykl.io" }]
keywords = ["fastapi", "settings", "sqlalchemy", "pydantic", "configuration"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "pillow>=10.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.26",
  "mypy>=1.7",
  "ruff>=0.4",
]

[tool.setuptools]
packages = ["fastapi_app_settings"]
package-dir = { "fastapi_app_settings" = "." }
include-package-data = true

[tool.setuptools.package-data]
fastapi_app_settings = ["templates/*.html"]

